@startuml
'https://plantuml.com/class-diagram

skinparam defaultFontName Droid Sans
skinparam linetype ortho
skinparam nodesep 50
skinparam class {
    BackgroundColor White
    BackgroundColor<<Setting>> Wheat
}

set separator none
package ItemFlow <<Frame>>{
    class Produto {
        - id: Long
        - nome: String
        - descricao: String
        - descontinuado: Boolean
        - precoVendaUnitario: Double
        - precoCompraUnitario: Double

    }

    class Estoque {
         - quantidadeEntrada: Long
         - quantidadeSaida: Long
         - dtEntrada: LocalDateTime
         - dtSaida: LocalDateTime
    }

    class Funcionario {
        - id: Long
        - nome: String
        - login: String
        - senha: String
    }
    class Venda{
        - id: Long
        - dtVenda: LocalDateTime
        - vendaPor: String
        - quantidade: Long
        - comissao: Double
        - valorTotalPorProduto: Double
        - valorTotalVenda: Double
    }

    class HistoricoProduto {
        - id: Long
        - dtCriacao: LocalDateTime
        - nomeProduto: String
        - dtEntrada: LocalDateTime
        - precoCompraUnitario: Double
        - dtSaida: LocalDateTime
        - precoVendaUnitario: Double
        - quantidadeEntrada: Long
        - quantidadeSaida: Long
        - valorTotalPorProduto: Double
        - valorTotalVenda: Double
        - vendaPor: String
        - valorTotal: Double
        - dtVenda: LocalDateTime
        - quantidade: Integer
        - comissao: Double
        - fornecedor: String

    }
    class Fornecedor <<Setting>>{
        - id: Long
        - nome: String
    }
    class TipoFuncionario <<Setting>> {
        - id: Long
        - tipo: String
    }


Produto "1..*" --> "1" Funcionario
Fornecedor "1" <-l- "1..*" Produto
Funcionario "1" -l-> "1..*" TipoFuncionario
HistoricoProduto "1..*" --> "1" "Produto"
Produto "1..*" --u> "1" Estoque
Venda "1" -r-> "1..*"Produto
}

@enduml
